Fix spacing of format icons when we show multiple rows

--- a/vufind/web/interface/themes/marmot/css/styles.css
+++ b/vufind/web/interface/themes/marmot/css/styles.css
@@ -1425,7 +1425,7 @@ background-image:url(/interface/themes/marmot/images/update.png);
 	width: 80px;
 	vertical-align: top;
 	padding-top: 64px;
-	margin-bottom: 10px;
+	margin-bottom: 22px;
 }
 
 .categoryValueEMedia{
